@@ -281,6 +281,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP236   (EXPERIMENTAL)(*2)
        Canon PIXMA MP237   (EXPERIMENTAL)(*2)
 
+       Canon MP270 series  (EXPERIMENTAL)
+       Canon PIXMA MP270   (EXPERIMENTAL)(*2)
+       Canon PIXUS MP270   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP272   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP276   (EXPERIMENTAL)(*2)
+
        Canon MP280 series  (EXPERIMENTAL)
        Canon PIXMA MP280   (EXPERIMENTAL)(*2)
        Canon PIXUS MP280   (EXPERIMENTAL)(*2)
